	* New experimental CDR3 detection (-3). We still advise to use IMGT/V-QUEST for better and complete results.
	* Better debug option -u (.affect), especially in the case of multi-germline analysis
	* Refactored dynamic programming computations (core/dynprog.cpp), experimental affine gaps
	* Removed unused code parts as well as some files
	* Streamlined flag processing in Makefiles
	* New and updated unit and functional tests

2015-01-31  The Vidjil Team
	* Better TRG and TRD+ parameters (-g). The multi-germline analysis will again be improved in a next release.
	* New experimental option (-I) to discard common kmers between different germlines (core/germline.cpp)
	* Updated outputs for better traceability (version in .json, germlines on stdout)
	* New mechanism to retrieve germline databases (germline/get-saved-germline)

2014-12-22  The Vidjil Team
	* Better multi-germline analysis (-g). This will again be improved in a next release.
	* New experimental incomplete rearrangement analysis (-i)
	* New and updated unit and functional tests
	* Bugs closed (-w 40 when no D germline)

2014-11-28  The Vidjil Team
	* New input method, now accepts compressed fasta files with gzip (core/fasta.cpp, gzstream/zlib)
	* Better multi-germline analysis (-g) and documentation. This analysis can now safely be used.
	* Streamlined input. Option -d is removed, and a germline is required (-V/(-D)/-J, or -G, or -g)
	* Removed unused code parts as well as some files
	* New and updated unit and functional tests - now more than 80% code coverage
	* New public continuous integration - travis, coveralls
	* Bugs closed (-l, large -r)

2014-10-22  The Vidjil Team
	* Streamlined filtering options (-r/-y/-z), better documented (doc/algo.org)
	* Streamlined output files, option to fix their basename (-b)
	* Updated .data .json output, now in the better documented 2014.10 format (doc/format-analysis.org)